--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -1,5 +1,11 @@
+set(SOURCES
+	"index.cpp"
+	"beep.cpp"
+)
+
 idf_component_register(
-	SRCS "index.cpp"
+	SRCS ${SOURCES}
+
 	PRIV_REQUIRES spi_flash
 	INCLUDE_DIRS ""
 )
