WIP Add sound driver

--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -1,11 +1,10 @@
-set(SOURCES
-	"index.cpp"
-	"beep.cpp"
-)
-
 idf_component_register(
-	SRCS ${SOURCES}
+	SRCS "index.cpp"
+	SRCS "beep.cpp"
 
 	PRIV_REQUIRES spi_flash
 	INCLUDE_DIRS ""
+
+	REQUIRES esp_driver_gpio
+	REQUIRES esp_driver_i2s
 )
