--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -1,10 +1,10 @@
 idf_component_register(
-	SRCS "index.cpp"
-	SRCS "beep.cpp"
+	SRCS "index.c"
+	SRCS "scan.c"
 
 	PRIV_REQUIRES spi_flash
 	INCLUDE_DIRS ""
 
-	REQUIRES esp_driver_gpio
-	REQUIRES esp_driver_i2s
+	PRIV_REQUIRES esp_driver_gpio
+	PRIV_REQUIRES usb
 )
