--- a/firmware/main/idf_component.yml
+++ b/firmware/main/idf_component.yml
@@ -2,3 +2,5 @@ dependencies:
   idf:
     version: '>=4.1.0'
   espressif/es8311: '*'
+  espressif/esp_codec_dev: '*'
+  espressif/usb_host_hid: '*'
