--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.20)
 
+set(SDKCONFIG "${CMAKE_BINARY_DIR}/sdkconfig")
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
-idf_build_set_property(MINIMAL_BUILD ON)
 project(etherrail_tag_scanning_system)
