--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -1,10 +1,8 @@
 idf_component_register(
-	SRCS "index.c"
-	SRCS "scan.c"
+	SRCS "index.cpp" "scan.cpp" "display.cpp" "font/index.cpp" "font/mono-40.cpp"
+	INCLUDE_DIRS "."
 
 	PRIV_REQUIRES spi_flash
-	INCLUDE_DIRS ""
-
 	PRIV_REQUIRES esp_driver_gpio
 	PRIV_REQUIRES usb
 )
